--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,10 @@
                 <version>3.2.0</version>
                 <executions>
                     <execution>
-                        <id>add-test-source</id>
-                        <phase>generate-test-sources</phase>
+                        <id>add-source</id>
+                        <phase>generate-sources</phase>
                         <goals>
-                            <goal>add-test-source</goal>
+                            <goal>add-source</goal>
                         </goals>
                         <configuration>
                             <sources>
